# RapidTrader

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  cppcheck_report.txt
.github/workflows/: auto_clang_format.yml  ci.yml  cppcheck.yml  linux.yml  macos.yml
FastExchange/: CMakeLists.txt  event_handler.cpp  event_handler.h  exchange.cpp  exchange.h  exchange_api.h
FastExchange/common/: log.h  robin_hood.h  types.h
FastExchange/matching/: matching_engine.cpp  matching_engine.h  matching_engine_router.h  order.cpp  order.h  symbol.h
FastExchange/matching/orderbook/: orderbook_interface.h  price_level.h  vector_orderbook.cpp  vector_orderbook.h
FastExchange/matching_engine/: matching_engine.cpp  matching_engine.h  matching_engine_router.h  order.cpp  order.h  orderbook_interface.h  price_level.h  symbol.h  vector_orderbook.cpp  vector_orderbook.h
FastExchange/message/: command.h  event.h  result.h
FastExchange/messaging/: dispatcher.h  message_queue.h  receiver.h  sender.h  template_dispatcher.h
FastExchange/orderbook/: matching_engine.cpp  matching_engine.h  order.h  orderbook_interface.h  orderbook_router.h  price_level.h  vector_orderbook.cpp  vector_orderbook.h
FastExchange/users/: user.h
benchmark/: CMakeLists.txt  bench_concurrent_market.cpp  bench_exchange.cpp  bench_market.cpp  bench_order.cpp  bench_orderbook.cpp  exchange_bench.cpp  generate_orders.cpp  generate_orders.h  order_benchmark.cpp  order_list_benchmark.cpp  orderbook_benchmark.cpp  price_level_benchmark.cpp
examples/: CMakeLists.txt  concurrent_market_example.cpp  exchange_example.cpp  market_example.cpp  simple_event_handler.h
include/: exchange.h  exchange_api.h
include/concurrent/: dispatcher.h  message_queue.h  queue.h  receiver.h  sender.h  template_dispatcher.h  thread_joiner.h  thread_pool.h
include/concurrent/messaging/: dispatcher.h  message_queue.h  receiver.h  sender.h  template_dispatcher.h
include/concurrent/thread_pool/: queue.h  task.h  thread_joiner.h  thread_pool.h
include/event_handler/: basic_event_handler.h  event.h  event_handler.h  event_handler_interface.h
include/matching/: concurrent_market.h  market.h  matching_engine.h  notification.h  notification_processor.h  order.h  orderbook_handler.h  symbol.h
include/matching/market/: concurrent_market.h  market.h
include/matching/orderbook/: level.h  map_orderbook.h  order.h  orderbook.h  price_level.h  symbol.h  vector_orderbook.h
include/message/: event.h
include/messaging/: command.h  dispatcher.h  message_queue.h  receiver.h  sender.h  template_dispatcher.h
include/users/: user_router.h
include/utils/: log.h  robin_hood.h  types.h
src/: CMakeLists.txt  event_handler.cpp  exchange.cpp
src/common/: CMakeLists.txt  types.h
src/concurrent/thread_pool/: thread_pool.cpp
src/event_handler/: event.cpp  event_handler.cpp
src/market/: concurrent_market.cpp
src/matching/: concurrent_market.cpp  market.cpp  matching_engine.cpp  notification.cpp  order.cpp
src/matching/market/: concurrent_market.cpp  market.cpp
src/matching/orderbook/: level.cpp  map_orderbook.cpp  notification_processor.cpp  order.cpp  symbol.cpp  vector_orderbook.cpp
src/message/: CMakeLists.txt  command.h
src/messages/: CMakeLists.txt  commands.h  event.h  messages.h  results.h
src/messaging/: CMakeLists.txt  command.cpp  dispatcher.h  message_queue.h  receiver.h  sender.h  template_dispatcher.h
src/order_book/: CMakeLists.txt  order_book.h  order_book_router.h  order_list.h
src/order_book/include/: order.h  order_book.h  order_list.h
src/order_book/src/: order_book.cpp  order_list.cpp
src/orderbook/: CMakeLists.txt  map_orderbook.h  order.h  order_book_router.h  order_list.h  orderbook_interface.h  price_level.h  types.h  vector_orderbook.h
src/users/: CMakeLists.txt  user_router.h
src/utils/: log.cpp
test/: CMakeLists.txt  message_queue_test.cpp  messaging_test.cpp  order_book_test.cpp  order_list_test.cpp  order_test.cpp  orderbook_test.cpp  test_level.cpp  test_market.cpp  test_message_queue.cpp  test_messaging.cpp  test_order.cpp  test_orderbook.cpp
test/market/: debug_event_handler.h  debug_notification_processor.h  market_test_fixture.h  test_add_order.cpp  test_add_orderbook.cpp  test_add_symbol.cpp  test_cancel_order.cpp  test_delete_order.cpp  test_delete_orderbook.cpp  test_delete_symbol.cpp  test_execute_order.cpp  test_replace_order.cpp
