cmake_minimum_required(VERSION 3.8)
project(fast_exchange_tests)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")
find_package(GTest REQUIRED)
add_executable(${PROJECT_NAME} order_test.cpp message_queue_test.cpp messaging_test.cpp orderbook_test.cpp)
target_link_libraries(${PROJECT_NAME} GTest::GTest GTest::Main order_book messaging messages)
install(TARGETS ${PROJECT_NAME} DESTINATION ${EXCHANGE_INSTALL_BIN_DIR})
include(GoogleTest)
gtest_discover_tests(${PROJECT_NAME})