cmake_minimum_required(VERSION 3.5)
project(order_book)
find_package(Boost)
if(Boost_FOUND)
    add_library(${PROJECT_NAME} INTERFACE order_book.h order.h order_list.h order_book_router.h)
    target_include_directories(${PROJECT_NAME} INTERFACE .)
    target_include_directories(${PROJECT_NAME} INTERFACE ${Boost_INCLUDE_DIRS})
endif()